--- a/src/app/categories/components/category-details/components/details-aside/details-aside.component.html
+++ b/src/app/categories/components/category-details/components/details-aside/details-aside.component.html
@@ -1,7 +1,7 @@
-<aside class="w-full">
+<aside class="w-full flex flex-col  gap-1">
 
     <app-category-header class="w-full"
-    [queryCategory]="undefined"
+    [queryCategory]="category().category"
     [categoriesValues]="categoriesValues()"
     />
 
