--- a/src/app/features/profile/profile.component.html
+++ b/src/app/features/profile/profile.component.html
@@ -1,7 +1,7 @@
 <section *ngIf="authService.CurrentUser()" 
-class="absolute top-20 left-0 w-full h-[70vh] flex justify-end items-center "
->
-    <aside class="relative menu text-base-content min-h-full w-80  z-20 mx-[2.5%]
+class=" absolute top-20 left-0 w-full h-[70vh] flex justify-end items-center ">
+
+    <aside class="animate-up relative menu text-base-content min-h-full w-80  z-50 mx-[2.5%]
     flex flex-col justify-start items-center gap-5 shadow-black shadow-sm rounded bg-gray-50
     after:absolute after:w-full after:h-[20%] after:bg-mz-primary after:opacity-35 after:top-0">
     
