--- a/src/app/shared/components/nav-bar/nav-bar.component.html
+++ b/src/app/shared/components/nav-bar/nav-bar.component.html
@@ -3,8 +3,8 @@ lg:hidden shadow-md shadow-black ">
     <app-links
     [showIcon]="true"
     linksClass="flex flex-col justify-center items-center z-12 text-gray-900 
-    xs:w-15 sm:w-22 hover:bg-mz-primary hover:rounded-t-md  py-1 duration-200
-    cursor-pointer hover:text-gray-50 text-lg"
+    xs:w-18 sm:w-22 hover:bg-mz-primary hover:rounded-t-md  py-1 mx-1 duration-200
+    cursor-pointer hover:text-gray-50 "
     styleActiveClass="bg-mz-primary text-white rounded-t-md "
     />
 
