--- a/src/app/categories/components/category-details/components/details-aside/components/related/related.component.html
+++ b/src/app/categories/components/category-details/components/details-aside/components/related/related.component.html
@@ -23,20 +23,13 @@
         </small>
         </div>
     
-        <div class="flex flex-col justify-center items-start gap-5 ca">
+        <div class="flex flex-col justify-center items-start gap-5 ">
             <h3 class="text-xs font-[400]">{{data.title}}</h3>
             <div class="flex justify-center items-center gap-2 lowercase">
-            <span>0 {{'categories.views' | translate}}</span>
-            <span>{{formatTime(data.created_at)}}</span>
+            <span class="text-[10px] text-gray-300">{{formatTime(data.created_at)}}</span>
             </div>
         </div>
     </div>
-
-        <button  type="button" 
-        class="cursor-pointer text-lg  text-gray-50 mx-2">
-        <i class="fa-solid fa-ellipsis-vertical"></i>
-        </button>
-  
 
 </div>
     }
