--- a/src/app/features/auth/components/auth-model/auth-model.component.html
+++ b/src/app/features/auth/components/auth-model/auth-model.component.html
@@ -1,9 +1,9 @@
-<section class="w-[95%] sm:w-160 h-150  mx-auto fixed bg-gray-50 rounded z-[100]  
+<section class="animate-up w-[95%] sm:w-160   mx-auto fixed bg-gray-50 rounded-box z-[100]  
 left-[50%] translate-x-[-50%]  top-[50%] translate-y-[-50%] shadow-sm shadow-black
 flex flex-col justify-evenly items-center border-1 border-mz-secound 
 ">
 
-<div class="w-full  flex flex-col justify-center items-center gap-2">
+<div class="w-full  flex flex-col justify-center items-center gap-2 my-4">
 
     <a (click)="closeAuth()">
     <i class="cursor-pointer fa-solid fa-close hover:text-error duration-200 absolute 
@@ -16,7 +16,7 @@ flex flex-col justify-evenly items-center border-1 border-mz-secound
     [options]="{
     src : 'https://cdn.lordicon.com/kdduutaw.json' ,
     trigger : triggerUserIcon() ,
-    class : 'size-[85px] sm:size-[100px] border-1 border-mz-primary rounded-3xl shadow-sm shadow-black',
+    class : 'animate-down size-[85px] sm:size-[100px] border-1 border-mz-primary rounded-3xl shadow-sm shadow-black',
     colors : 'primary:#434F62,secondary:#4C6793'
     }"
     />
@@ -24,11 +24,8 @@ flex flex-col justify-evenly items-center border-1 border-mz-secound
     </div>
 
     <app-sign-with-google (click)="signInWithGoogle()" />
-
     <span class=" text-black font-bold">{{'auth.or' | translate}}</span>
-
     <ng-content />
-
 </div>
 </section>
 
