--- a/src/app/features/auth/pages/register/register.component.html
+++ b/src/app/features/auth/pages/register/register.component.html
@@ -19,9 +19,13 @@
     }
     </div>
         <app-form-feild [form]="form" class="w-full"/>
-        <div class="w-full">
-            <p class="text-error capitalize text-sm text-left">{{registerErrorMsg()}}</p>
+
+        <div *ngIf="registerErrorMsg()" class="w-full flex justify-start items-center">
+        <p class="text-error capitalize text-sm text-left">
+            {{ `auth.${registerErrorMsg()}` | translate}}
+        </p>
         </div>
+
             <button type="submit"  
             class="w-full  btn  btn-neutral  bg-mz-primary hover:bg-mz-secound
             duration-200 text-gray-50 capitalize">
