--- a/src/app/features/home/components/intro-pop-up/intro-pop-up.component.html
+++ b/src/app/features/home/components/intro-pop-up/intro-pop-up.component.html
@@ -1,4 +1,4 @@
-<section>
+<section class="absolute top-0 left-0 w-full h-screen flex justify-center items-center">
 
     <button (click)="initShowIntroPopUp()" type="button"
     class="absolute left-2 top-[50%] translate-y-[-50%] cursor-pointer z-5">
@@ -7,12 +7,12 @@
     </button>
     
     @defer (when isIntro()) {
-    <section  
-    class="bg-white fixed top-[50%] translate-y-[-50%]   z-20  w-[90%] md:w-auto duration-700 "
-    [ngClass]="isIntro() ? 'left-[50%] translate-x-[-50%]' : 'translate-x-[-300%]'">
+    <section  *ngIf="isIntro()"
+    class="animate-sideLeft bg-white z-20   w-[90%] md:w-[600px] duration-700 ">
+
         <div class="relative bg-white  shadow-sm">
             <div class="flex items-center justify-between p-4 md:p-5 border-b rounded-t  border-gray-200">
-                <h3 class="text-xl font-semibold text-gray-900  capitalize">
+                <h3 class="text-lg sm:text-xl font-semibold text-gray-900  capitalize">
                 {{ 'WELCOME_TO_MZ_MARKETING_AGENCY' | translate }}
                 </h3>
                 <button (click)="initShowIntroPopUp()" 
@@ -22,16 +22,16 @@
             </div>
 
             <div class="p-4 md:p-5 space-y-4">
-            <p class="text-base leading-relaxed text-gray-500 ">
+            <p class="text-sm leading-relaxed text-gray-500 ">
             {{ 'MZ_MARKETING_DESCRIPTION_1' | translate }}
             </p>
-            <p class="text-base leading-relaxed text-gray-500 ">
+            <p class="text-sm leading-relaxed text-gray-500 ">
             {{ 'MZ_MARKETING_DESCRIPTION_2' | translate }}
             </p>
             </div>
 
             <ul class="flex  items-center gap-2 p-4 md:p-5 border-t border-gray-200 rounded-b dark:border-gray-600">
-            <li routerLink="/categories/motion">
+            <li routerLink="/categories">
             <a class="cursor-pointer text-white bg-mz-primary hover:bg-mz-secound 
             font-medium rounded-lg text-sm px-5 py-2.5 text-center capitalize ">
             {{ 'SHOW_CATEGORIES' | translate }}
