--- a/src/app/features/packages/page/packages/packages.component.html
+++ b/src/app/features/packages/page/packages/packages.component.html
@@ -10,7 +10,7 @@
     @for (package of packages(); track package.id) {
     @defer (on viewport){
     
-    <li class="w-[90%] sm:w-100  bg-white mb-12 mt-2 rounded-2xl shadow-xl shadow-mz-secound
+    <li class="animate-down w-[90%] sm:w-100  bg-white mb-12 mt-2 rounded-2xl shadow-xl shadow-mz-secound
     hover:shadow-sm duration-200 flex flex-col justify-start items-center ">
 
     <div class="m-2 flex flex-col justify-center items-start w-[90%] gap-4">
