--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-
+@defer (on idle) {
 <footer class="relative w-full min-h-[90vh] bg-mz-secound flex flex-col justify-center items-center gap-8">
 
     <div class="w-[90%] flex flex-col  justify-between items-center">
@@ -41,5 +41,5 @@
       <div class="w-[95%] capitalize text-gray-50 text-center ">
       copyright © 2025.create m&z page by mohamed enara
       </div>
-
   </footer>
+}
