add commit update

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<section >
+<section class="w-full">
 
     <app-header />
     <router-outlet name="register"/>
@@ -9,6 +9,4 @@
     @defer (on immediate) {
         <app-footer />
     }
-
-
 </section>
