--- a/src/app/categories/pages/category/category.component.html
+++ b/src/app/categories/pages/category/category.component.html
@@ -1,4 +1,4 @@
-<section class="w-full flex flex-col  justify-center items-center gap-10 my-8">
+<section class="w-full flex flex-col  justify-center items-center gap-10 my-10">
 
     <app-category-header class="w-[80%] lg:w-[50%]"
     [queryCategory]="queryCategory()"
@@ -7,8 +7,9 @@
     
 <ul [ngClass]="categoryData().length > 0 ? 'grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-10' : ''">
 @for (data of categoryData(); track data.id) {
-    <div [routerLink]="['/categories/watch',data.category]" [queryParams]="{id : data.id}"
-    class="rounded-2xl  cursor-pointer flex justify-center items-center  border-1 border-mz-primary">
+    <div [routerLink]="['/categories/watch']" 
+    [queryParams]="{id : data.id}" queryParamsHandling="merge"
+    class="rounded-box cursor-pointer flex justify-center items-center  border-1 border-mz-primary">
 @defer (on viewport) {
     <app-category-view 
     [options]="{
@@ -16,14 +17,14 @@
     type : data.type,
     poster : data.poster ,
     class : data.category === 'reels' ? 
-    'w-[220px] h-[320px] object-cover rounded-2xl animate-down' :
-    'h-[200px] w-[300px] object-cover rounded-2xl animate-down',
+    'w-[220px] h-[320px] object-cover rounded-box animate-down' :
+    'h-[200px] w-[300px] object-cover rounded-box animate-down',
     muted : true,
     }"
     
     />
 }@placeholder {
-<div class="rounded-2xl bg-zinc-500 animate-pulse"
+<div class="rounded-2xl bg-zinc-500 animate-pulse" 
 [ngClass]="data.category === 'reels' ? 
 'w-[220px] h-[320px] object-cover rounded-2xl' :
 'h-[200px] w-[300px] object-cover rounded-2xl'
@@ -40,6 +41,13 @@
 }
 </ul>
 
-
+<app-related-video-details class="w-full fixed z-10"
+*ngIf="categoryById() && categoryById()?.type === 'video'"
+[categoryById]="categoryById()"
+/>
 </section>
 
+
+
+
+    
