--- a/src/app/features/auth/components/auth-model/auth-model.component.html
+++ b/src/app/features/auth/components/auth-model/auth-model.component.html
@@ -6,8 +6,8 @@ flex flex-col justify-evenly items-center border-1 border-mz-secound
 <div class="w-full  flex flex-col justify-center items-center gap-2 my-4">
 
     <a (click)="closeAuth()">
-    <i class="cursor-pointer fa-solid fa-close hover:text-error duration-200 absolute 
-    right-4 top-4 text-2xl">
+    <i class="cursor-pointer fa-solid fa-close hover:opacity-50 duration-200 absolute 
+    right-5 top-5 text-2xl">
     </i>
     </a>
 
