--- a/src/app/shared/components/nav-bar/nav-bar.component.html
+++ b/src/app/shared/components/nav-bar/nav-bar.component.html
@@ -1,4 +1,4 @@
-<nav *ngIf="isScroll()" class="w-full  fixed bottom-0  z-10  bg-gray-100  
+<nav *ngIf="isScroll()" class="animate-up w-full fixed bottom-0  z-10  bg-gray-100  
 lg:hidden shadow-md shadow-black ">
     <app-links
     [showIcon]="true"
