--- a/src/app/categories/components/category-header/category-header.component.html
+++ b/src/app/categories/components/category-header/category-header.component.html
@@ -13,14 +13,16 @@ class="w-full bg-mz-secound rounded"
 >
 
 @for (category of sortedCategoryValues(); track category) {
-<swiper-slide [routerLink]="['/categories/category', category]" 
+<swiper-slide  [routerLink]="pathname()"  
+queryParamsHandling="merge"
+[queryParams]="{category : category}" 
 class="rounded flex justify-center items-center"
 [ngClass]="queryCategory() === category ? 
 'text-mz-primary bg-gray-300 rounded shadow-md shadow-black'
 : ''">
 @defer (on viewport) {
 <a class="cursor-pointer hover:opacity-60 duration-200 p-1 px-2">
-{{`categories.${category}` | translate}}
+{{`categories.${category}` | translate}} 
 </a>
 }@placeholder {
     <a class="w-24 h-8 rounded bg-zinc-400 animate-pulse"></a>
