--- a/src/app/features/profile/profile.component.html
+++ b/src/app/features/profile/profile.component.html
@@ -24,12 +24,20 @@ class=" absolute top-20 left-0 w-full h-[70vh] flex justify-end items-center ">
 </li>
 
 <li class="w-full"> 
-    <a class="flex justify-start items-center  capitalize font-bold gap-5
+    <a [routerLink]="['/',{outlets : {primary :['history'], profile : null}}]" 
+    class="flex justify-start items-center  capitalize font-bold gap-5
     cursor-pointer">
     <i class="fa-solid fa-clock-rotate-left text-xl"></i> {{'profile.history' | translate}}
     </a>
 </li>
 
+<li class="w-full"> 
+    <a [routerLink]="['/',{outlets : {  profile : null}}]" 
+    class="flex justify-start items-center  capitalize font-bold gap-5 
+    cursor-pointer">
+    <i class="fa-regular fa-comment-dots text-xl"></i> {{'chat m&z' | translate}}
+    </a>
+</li>
 <li class="w-full"> 
     <a [routerLink]="['/',{outlets : {'booking-outlet': 'booking' , profile : null}}]" 
     class="flex justify-start items-center  capitalize font-bold gap-5 
@@ -55,5 +63,8 @@ class=" absolute top-20 left-0 w-full h-[70vh] flex justify-end items-center ">
 
     </ul>
 
-    </aside>
+</aside>
+<div [routerLink]="['/',{outlets : {  profile : null}}]"  
+class="absolute left-0 top-0 h-full w-full  z-1">
+</div>
 </section>
