--- a/src/app/features/about/page/about.component.html
+++ b/src/app/features/about/page/about.component.html
@@ -2,18 +2,20 @@
 
 <div class="w-[95%] flex flex-col justify-center items-center gap-5 mt-5">
 
-<div class="w-full flex  md:flex-row flex-col-reverse flex-wrap justify-evenly items-center ">
+<div class="w-full flex  md:flex-row flex-col-reverse flex-wrap justify-evenly items-center py-4">
     
-<div  class="animate-sideLeft w-full md:w-1/2 flex flex-col  justify-center items-center md:items-start gap-4 ">
+<div class="animate-sideLeft w-full md:w-1/2 flex flex-col  justify-center items-center 
+md:items-start gap-4 ">
     <h1 class="text-xl md:text-2xl text-left capitalize text-gray-50 font-semibold">
     {{'about.ourAbout' | translate}} 
     <span class="font-extrabold text-mz-primary text-2xl md:text-3xl">{{'about.mz' | translate}}</span>
     </h1>
 
-    <p class="text-gray-300 text-lg leading-8 capitalize font-[400]">
+    <p class="text-gray-300 text-lg leading-8 capitalize font-[400] ">
     {{'about.paragraph' | translate}}
     </p>
 </div>
+
 <app-astronaut-image  class="astronaut-component w-full md:w-1/2" />
 </div>
 
