--- a/src/app/shared/components/user/user.component.html
+++ b/src/app/shared/components/user/user.component.html
@@ -20,7 +20,7 @@
     }@else {
 <li>
 <app-user-image 
-[routerLink]="[{outlets : {profile: this.showUserData() ?  'profile' : null  }}]"
+[routerLink]="['/',{outlets : {profile: this.showUserData() ?  'profile' : null  }}]"
 queryParamsHandling="merge"
 (click)="initModleUserData()" imageClass="size-7 cursor-pointer"/>
 </li>
