--- a/src/app/chat/page/chat.component.html
+++ b/src/app/chat/page/chat.component.html
@@ -2,10 +2,11 @@
 
     <nav class="w-[95%] lg:w-[60%] bg-gray-50 flex flex-col justify-center items-center gap-2 my-10
     rounded-2xl shadow-md shadow-black">
-    <app-chat-header class="w-full "/>
+    <app-chat-header class="w-full" />
 
     <div class="w-[95%]  flex flex-col justify-start  items-center py-2">
-        <app-chat-container class="w-full h-[50vh] md:h-[55vh] overflow-y-auto" style="scrollbar-width: none;"
+        <app-chat-container #chatContainer
+        class="w-full"
         [messagesData]="messagesData()"
         />
         <app-chat-form class="w-full"
