--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,5 +1,5 @@
-@defer (on idle) {
-<footer class="relative w-full min-h-[90vh] bg-mz-secound flex flex-col justify-center items-center gap-8">
+@defer (when layoutHide() !== true ;on idle) {
+<footer *ngIf="layoutHide() !== true" class="relative w-full min-h-[90vh] bg-mz-secound flex flex-col justify-center items-center gap-8">
 
     <div class="w-[90%] flex flex-col  justify-between items-center">
 
